--- a/nearby.html
+++ b/nearby.html
@@ -24,7 +24,7 @@
           <li role="presentation" ng-class="men_active"><a href="#" ng-click="women_active='inactive';men_active='active'">SHOP MEN</a></li>
           <div class="brand">
             <img src="/fadstreet/files/logo.png" height="30" width="30">
-            <span class="logo">FAD<span style="color:#1C5ECF">STREET</span></span>
+            <span class="logo">FAD<span style="color:#482E8B">STREET</span></span>
             <div class="nav-right">
               <!-- <loginbutton>Download our App</loginbutton> -->
               <loginbutton ng-click="login()">LOGIN</loginbutton>
@@ -35,11 +35,11 @@
         </ul>
       </div>
       <div class="container-flow customnavbar">
-        <div class="container">
+        <div class="container" align="center">
           <ul class="seperator">
             <a href="/fadstreet/landing.html"><li>HOME</li></a>
             <a href=""><li>EXPLORE</li></a>
-            <a href="/fadstreet/nearby.html"><li style="font-weight:900;color:#1C5ECF;">NEARBY</li></a>
+            <a href="/fadstreet/nearby.html"><li style="font-weight:900;color:#482E8B;">NEARBY</li></a>
             <a href=""><li>BRANDS</li></a>
             <a href=""><li>MYCLOSET</li></a>
           </ul>
